[gd_scene load_steps=21 format=3 uid="uid://bt0mlndmui4st"]

[ext_resource type="Texture2D" uid="uid://ck6rgru5r2hs2" path="res://assets/Player ship/Player_ship (16 x 16).png" id="1_6ac8j"]
[ext_resource type="Script" path="res://player.gd" id="1_rhb0x"]
[ext_resource type="Texture2D" uid="uid://qg7qf71snpu7" path="res://assets/Player ship/Boosters (16 x 16).png" id="2_nk0wx"]
[ext_resource type="Texture2D" uid="uid://c7yxe5pcarwc4" path="res://assets/Player ship/Boosters_left (16 x 16).png" id="3_5xn05"]
[ext_resource type="Texture2D" uid="uid://cmitlfdntnvpt" path="res://assets/Player ship/Boosters_right (16 x 16).png" id="4_u8lhh"]
[ext_resource type="Texture2D" uid="uid://dijnde7k4ieu3" path="res://assets/Effects/Explosion (16 x 16).png" id="5_6pvr7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_an3t6"]
atlas = ExtResource("2_nk0wx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi3vn"]
atlas = ExtResource("2_nk0wx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0f2x"]
atlas = ExtResource("3_5xn05")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n36ij"]
atlas = ExtResource("3_5xn05")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nperi"]
atlas = ExtResource("4_u8lhh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgpkq"]
atlas = ExtResource("4_u8lhh")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ln3qo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_an3t6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi3vn")
}],
"loop": true,
"name": &"forward",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0f2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n36ij")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nperi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgpkq")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_wxheo"]
resource_name = "RESET"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_6ac8j")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_muhti"]
resource_name = "explode"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_6pvr7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 5]
}

[sub_resource type="Animation" id="Animation_uogyy"]
resource_name = "forward"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_sii0i"]
resource_name = "left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_sps1v"]
resource_name = "right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m7nqa"]
_data = {
"RESET": SubResource("Animation_wxheo"),
"explode": SubResource("Animation_muhti"),
"forward": SubResource("Animation_uogyy"),
"left": SubResource("Animation_sii0i"),
"right": SubResource("Animation_sps1v")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38ema"]
size = Vector2(14, 14)

[node name="Player" type="Area2D" node_paths=PackedStringArray("n_ship", "n_fire_anim", "n_ship_anim", "n_shot_cooldown")]
script = ExtResource("1_rhb0x")
n_ship = NodePath("Sprite2D")
n_fire_anim = NodePath("Sprite2D/AnimatedSprite2D")
n_ship_anim = NodePath("AnimationPlayer")
n_shot_cooldown = NodePath("ShotCooldown")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6ac8j")
hframes = 3
frame = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sprite2D"]
position = Vector2(0, 16)
sprite_frames = SubResource("SpriteFrames_ln3qo")
animation = &"right"
autoplay = "forward"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m7nqa")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_38ema")

[node name="ShotCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShotCooldown" to="." method="_on_shot_cooldown_timeout"]
